Add bootstrap styling to html index elements

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <!-- Callout -->
         <section class="callout">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p>Sign up today to start receiving the world's best whiskeys every month. First one is free!</p>
+            <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
+            <s>$19.99</s><strong><mark>First one is free!</mark></strong></p>
+            <button class="btn btn-success btn-lg">Sign Up!</button>
+            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink responsibly.</small></p>
         </section>
         <!-- /.callout -->
         <hr>
@@ -22,35 +25,71 @@
         <!-- Quotes -->
         <section class="quotes">
             <h2 class="text-uppercase">Quotes:</h2>
-            <div class="quote">
+            <blockquote class="blockquote">
                 <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
                 <p>- Jane Doe</p>
-            </div>
-            <div class="quote">
+            </blockquote>
+            <blockquote class="blockquote">
                 <p>I haven't been sober for months!</p>
                 <p>- Jane Doe</p>
-            </div>
+            </blockquote>
         </section>
         <!-- /.quotes -->
         <hr>
 
         <!-- Features -->
         <section class="features">
-            <h2>Features:</h2>
+            <h2 class="text-uppercase">Features:</h2>
             <div class="feature">
                 <h3>Feature 1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
             <div class="feature">
                 <h3>Feature 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
             <div class="feature">
                 <h3>Feature 3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
         </section>
         <!-- /.features -->
+
+        <!-- monthly-favorites -->
+        <table class="table table-striped">
+            <h2 class="text-uppercase">Monthly Favorites:</h2>
+            <thead class="thead-dark">
+                <tr>
+                    <th>Name</th>
+                    <th>Origin</th>
+                </tr>
+            </thead>
+            <tr>
+                <td>Nikka Yoichi single malt</td>
+                <td>Japan</td>
+            </tr>
+            <tr>
+                <td>Lagavulin 16-year-old</td>
+                <td>Scotland</td>
+            </tr>
+            <tr>
+                <td>The Macallan 12-year-old</td>
+                <td>Scotland</td>
+            </tr>
+            <tr>
+                <td>Daddy Rack Tennessee</td>
+                <td>USA</td>
+            </tr>
+            <tr>
+                <td>Green Spot</td>
+                <td>Ireland</td>
+            </tr>
+        </table>
+        <!-- /.monthly-favorites -->
+        <hr>
     </article>
 </body>
 
