Add section to index html

--- a/index.html
+++ b/index.html
@@ -57,38 +57,42 @@
             </div>
         </section>
         <!-- /.features -->
+        <hr>
 
         <!-- monthly-favorites -->
-        <table class="table table-striped">
-            <h2 class="text-uppercase">Monthly Favorites:</h2>
-            <thead class="thead-dark">
+        <section class="table">
+            <table class="table table-striped">
+                <h2 class="text-uppercase">Monthly Favorites:</h2>
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Name</th>
+                        <th>Origin</th>
+                    </tr>
+                </thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Origin</th>
+                    <td>Nikka Yoichi single malt</td>
+                    <td>Japan</td>
                 </tr>
-            </thead>
-            <tr>
-                <td>Nikka Yoichi single malt</td>
-                <td>Japan</td>
-            </tr>
-            <tr>
-                <td>Lagavulin 16-year-old</td>
-                <td>Scotland</td>
-            </tr>
-            <tr>
-                <td>The Macallan 12-year-old</td>
-                <td>Scotland</td>
-            </tr>
-            <tr>
-                <td>Daddy Rack Tennessee</td>
-                <td>USA</td>
-            </tr>
-            <tr>
-                <td>Green Spot</td>
-                <td>Ireland</td>
-            </tr>
-        </table>
+                <tr>
+                    <td>Lagavulin 16-year-old</td>
+                    <td>Scotland</td>
+                </tr>
+                <tr>
+                    <td>The Macallan 12-year-old</td>
+                    <td>Scotland</td>
+                </tr>
+                <tr>
+                    <td>Daddy Rack Tennessee</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Green Spot</td>
+                    <td>Ireland</td>
+                </tr>
+            </table>
+        </section>
         <!-- /.monthly-favorites -->
+
         <hr>
     </article>
 </body>
