--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    
+
     <title>Whiskey Drop | Taste a new whiskey every month</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0.">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -12,48 +12,90 @@
 <body>
     <article class="container">
         <!-- Callout -->
-        <section class="callout">
-            <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
-            <s>$19.99</s><strong><mark>First one is free!</mark></strong></p>
-            <button class="btn btn-success btn-lg">Sign Up!</button>
-            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink responsibly.</small></p>
-        </section>
+        <div class="row">
+            <div class="col-12">
+                <section class="callout">
+                    <h1>The finest whiskeys delivered to your doorstep.</h1>
+                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month.
+                        <s>$19.99</s><strong><mark>First one is free!</mark></strong></p>
+                    <button class="btn btn-success btn-lg">Sign Up!</button>
+                    <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink
+                            responsibly.</small></p>
+                </section>
+            </div>
+        </div>
         <!-- /.callout -->
         <hr>
 
         <!-- Quotes -->
         <section class="quotes">
-            <h2 class="text-uppercase">Quotes:</h2>
-            <blockquote class="blockquote">
-                <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
-                <p>- Jane Doe</p>
-            </blockquote>
-            <blockquote class="blockquote">
-                <p>I haven't been sober for months!</p>
-                <p>- Jane Doe</p>
-            </blockquote>
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-uppercase">Quotes:</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <blockquote class="blockquote">
+                        <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
+                        <p>- Jane Doe</p>
+                    </blockquote>
+                </div>
+                <div class="col-12 col-md-6">
+                    <blockquote class="blockquote">
+                        <p>I haven't been sober for months!</p>
+                        <p>- Jane Doe</p>
+                    </blockquote>
+                </div>
+            </div>
         </section>
         <!-- /.quotes -->
         <hr>
 
         <!-- Features -->
         <section class="features">
-            <h2 class="text-uppercase">Features:</h2>
-            <div class="feature">
-                <h3>Feature 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-uppercase">Features:</h2>
+                </div>
             </div>
-            <div class="feature">
-                <h3>Feature 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-            </div>
-            <div class="feature">
-                <h3>Feature 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="feature">
+                        <h3>Feature 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat.</p>
+                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="feature">
+                        <h3>Feature 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat.</p>
+                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                    </div>
+                </div>
+                <div class="col-12 d-md-none">
+                    <div class="feature">
+                        <h3>Feature 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat.</p>
+                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- /.features -->
@@ -61,35 +103,43 @@
 
         <!-- monthly-favorites -->
         <section class="table">
-            <table class="table table-striped">
-                <h2 class="text-uppercase">Monthly Favorites:</h2>
-                <thead class="thead-dark">
+            <div class="row">
+                <div class="col-12">
+                    <table class="table table-striped">
+                        <h2 class="text-uppercase">Monthly Favorites:</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>Name</th>
+                            <th>Origin</th>
+                        </tr>
+                    </thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Origin</th>
+                        <td>Nikka Yoichi single malt</td>
+                        <td>Japan</td>
                     </tr>
-                </thead>
-                <tr>
-                    <td>Nikka Yoichi single malt</td>
-                    <td>Japan</td>
-                </tr>
-                <tr>
-                    <td>Lagavulin 16-year-old</td>
-                    <td>Scotland</td>
-                </tr>
-                <tr>
-                    <td>The Macallan 12-year-old</td>
-                    <td>Scotland</td>
-                </tr>
-                <tr>
-                    <td>Daddy Rack Tennessee</td>
-                    <td>USA</td>
-                </tr>
-                <tr>
-                    <td>Green Spot</td>
-                    <td>Ireland</td>
-                </tr>
-            </table>
+                    <tr>
+                        <td>Lagavulin 16-year-old</td>
+                        <td>Scotland</td>
+                    </tr>
+                    <tr>
+                        <td>The Macallan 12-year-old</td>
+                        <td>Scotland</td>
+                    </tr>
+                    <tr>
+                        <td>Daddy Rack Tennessee</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Green Spot</td>
+                        <td>Ireland</td>
+                    </tr>
+                    </table>
+                </div>
+            </div>
         </section>
         <!-- /.monthly-favorites -->
 
