Add quotes and features styling in landing page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="container-fluid alert-container">
             <div class="row">
                 <div class="col-12 d-none d-sm-block">
-                    <div class="site-wide-alert alert-warning">Sale Now On. Get a 12 month subscription for the price of 6! <a
-                            href="">See here for more details</a></div>
+                    <div class="site-wide-alert alert-warning"><i class="fa fa-exclamation-circle"></i> Sale Now On. Get
+                        a 12-month subscription for the price of 6! <a href="">See here for more details!</a></div>
                 </div>
             </div>
         </div>
@@ -84,138 +84,153 @@
     </div>
 
     <!-- Quotes -->
-    <div class="container quotes-container">
-        <section class="quotes">
-            <div class="row">
-                <div class="col-12 my-5">
-                    <h2 class="text-uppercase">Quotes:</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <div class="media">
-                        <div class="d-none d-sm-block">
-                            <img src="images/girl-image.png" class="rounded-circle mr-3" height=100 width=100>
-                        </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>I've been introduced to more than 10 great international whiskeys I never knew about.
-                                </p>
-                                <p>- Jane Doe</p>
-                            </blockquote>
-                        </div>
+    <div class="container-wrapper">
+        <div class="container quotes-container content-container">
+            <section class="quotes">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Quotes:</h2>
+                        <hr class="block-divider block-divider--short">
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="media">
-                        <div class="d-none d-sm-block">
-                            <img src="images/guy-image.png" class="rounded-circle mr-3" height=100 width=100>
-                        </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>I haven't been sober for months!</p>
-                                <p>- John Doe</p>
-                            </blockquote>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="images/girl-image.png" class="rounded-circle mr-3" height=100 width=100>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>I've been introduced to more than 10 great international whiskeys I never knew
+                                        about.
+                                    </p>
+                                    <p>- Jane Doe</p>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
-                </div>
-        </section>
-        <!-- /.quotes -->
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="images/guy-image.png" class="rounded-circle mr-3" height=100 width=100>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>I haven't been sober for months!</p>
+                                    <p>- John Doe</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+            </section>
+            <!-- /.quotes -->
+        </div>
     </div>
 
     <!-- Features -->
-    <div class="features-container">
-        <section class="features">
-            <div class="row">
-                <div class="col-12 my-5">
-                    <h2 class="text-uppercase">Features:</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span
-                                class="badge badge-success">NEW!</span></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat.</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+    <div class="container-wrapper container-wrapper--orange">
+        <div class="container features-container content-container">
+            <section class="features">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Features:</h2>
+                        <hr class="block-divider block-divider--short block-divider--white">
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat.</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fas fa-gift d-none d-sm-block"></i> Feature 1 <span
+                                    class="badge badge-success">NEW!</span></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut
+                                labore
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris
+                                nisi
+                                ut
+                                aliquip ex ea commodo consequat.</p>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fas fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut
+                                labore
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris
+                                nisi
+                                ut
+                                aliquip ex ea commodo consequat.</p>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
+                    </div>
+                    <div class="col-12 d-md-none d-lg-block col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fas fa-times-circle d-none d-sm-block"></i> Feature 3</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut
+                                labore
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris
+                                nisi
+                                ut
+                                aliquip ex ea commodo consequat.</p>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 d-md-none d-lg-block col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat.</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- /.features -->
+            </section>
+            <!-- /.features -->
+        </div>
     </div>
 
     <!-- monthly-favorites -->
-    <div class="favorites-container">
-        <section class="table">
-            <div class="row">
-                <div class="col-12 my-5">
-                    <table class="table table-striped col-12 my-5">
-                        <h2 class="text-uppercase">Monthly Favorites:</h2>
+    <div class="container-wrapper">
+        <div class="container favorites-container content-container">
+            <section class="table">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <table class="table table-striped col-12 my-5">
+                            <h2 class="text-uppercase">Monthly Favorites:</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <thead class="thead-dark">
+                <div class="row">
+                    <div class="col-12">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>Name</th>
+                                <th>Origin</th>
+                            </tr>
+                        </thead>
                         <tr>
-                            <th>Name</th>
-                            <th>Origin</th>
+                            <td>Nikka Yoichi single malt</td>
+                            <td>Japan</td>
                         </tr>
-                    </thead>
-                    <tr>
-                        <td>Nikka Yoichi single malt</td>
-                        <td>Japan</td>
-                    </tr>
-                    <tr>
-                        <td>Lagavulin 16-year-old</td>
-                        <td>Scotland</td>
-                    </tr>
-                    <tr>
-                        <td>The Macallan 12-year-old</td>
-                        <td>Scotland</td>
-                    </tr>
-                    <tr>
-                        <td>Daddy Rack Tennessee</td>
-                        <td>USA</td>
-                    </tr>
-                    <tr>
-                        <td>Green Spot</td>
-                        <td>Ireland</td>
-                    </tr>
-                    </table>
+                        <tr>
+                            <td>Lagavulin 16-year-old</td>
+                            <td>Scotland</td>
+                        </tr>
+                        <tr>
+                            <td>The Macallan 12-year-old</td>
+                            <td>Scotland</td>
+                        </tr>
+                        <tr>
+                            <td>Daddy Rack Tennessee</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>Green Spot</td>
+                            <td>Ireland</td>
+                        </tr>
+                        </table>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <!-- /.monthly-favorites -->
+            </section>
+            <!-- /.monthly-favorites -->
+        </div>
     </div>
 
     <div class="modal" tabindex="-1" role="dialog" id="signUpModal">
